--- a/static/styles/user-side-bar.css
+++ b/static/styles/user-side-bar.css
@@ -9,7 +9,7 @@
   border-right: 1px solid var(--stone-3);
   background: var(--gray-0);
   overflow: auto;
-  scrollbar-width: none;
+  scrollbar-width: thin;
   z-index: 8;
 
   > header {
